# lightwave-cli

./: .gitignore  Cargo.toml  README.md  ambilight.py
crates/lightwave/: Cargo.toml
crates/lightwave-ambilight/: Cargo.toml
crates/lightwave-ambilight/src/: lib.rs  sampler.rs
crates/lightwave-ambilight/src/capture/: mod.rs  pipewire.rs
crates/lightwave-core/: Cargo.toml
crates/lightwave-core/src/: api.rs  color.rs  lib.rs  net.rs
crates/lightwave-music/: Cargo.toml
crates/lightwave-music/src/: capture.rs  dsp.rs  lib.rs
crates/lightwave/src/: main.rs
crates/lightwave/src/commands/: ambilight.rs  color.rs  mod.rs  music.rs  presets.rs  start.rs  stop.rs
src/: api.rs  cli.rs  main.rs  models.rs  utils.rs
