[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
clap = { version = "4.5", features = ["derive"] }
cpal = "0.16"
realfft = "3"
owo-colors = "4"
anstyle = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
